# state-system

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.workgraph/: .gitignore  graph.jsonl
docs/: NORTH_STAR.md  agent-integration.md  app-integration-pressure-tests.md  app-substrate-contract.md  model-mediated-drift-pressure-suite.md  source-modules.md  spec-ecs-consumption.md  state-system-architecture.html  state-system-deck.html  state-system-network-flow.html  system-diagram.html
examples/: acme-auditable-workflows-capability-state-after-github.json  acme-auditable-workflows-capability-state.json  acme-ops-operating-picture.json  alex-agent-memory-entry.json  alex-commit-result.json  alex-contract-journal-entry.json  alex-github-capability-journal-entry.json  alex-github-launch-readiness-agent-memory-entry.json  alex-github-launch-readiness-commit-result.json  alex-github-launch-readiness-model-proposal-output.json  alex-github-launch-readiness-model-review-packet.json  alex-github-launch-readiness-review-signal.json  alex-github-launch-readiness-trigger.json  alex-github-obligation-journal-entry.json  alex-model-proposal-output.json  alex-model-review-packet.json  alex-persona.json  alex-review-signal.json  alex-stale-contract-trigger.json  audit-logging-launch-obligation-state-after-github.json  audit-logging-launch-obligation-state.json  governance-external-copy-policy.json  harbor-contract-obligation-state-after-alex.json  harbor-contract-obligation-state-after-patrick.json  harbor-contract-obligation-state.json  laura-agent-memory-entry.json  (+69 more)
(+383 files in other folders)
